--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   google_fonts: ^6.1.0
   shared_preferences: ^2.2.2
   hive: ^2.2.3
+  sqflite: ^2.3.0
 
 dev_dependencies:
   flutter_test:
